generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  email     String   @unique
  password  String
  phone     String?
  instagram String?
  telegram  String?
  firstname String?
  lastname  String?
  middlename String?
  role      Role
  /// null = не підтверджено, true = 18+, false = менше 18
  ageVerified Boolean?
  posts     Post[]
  orders    Order[]
  reviews   Review[]
  viewedProducts UserViewedProduct[]
  cartItems     CartItem[]
  wishlist      UserWishlist[]
  promoUsages   PromoCodeUsage[]
}

model PasswordReset {
  id        String   @id @default(cuid())
  email     String
  code      String
  expiresAt DateTime
  createdAt DateTime @default(now())

  @@index([email])
}

model CartItem {
  id        String   @id @default(cuid())
  userId    String
  productId String
  quantity  Int      @default(1)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  product   Product  @relation(fields: [productId], references: [id], onDelete: Cascade)
  @@unique([userId, productId])
}

model UserWishlist {
  userId    String
  productId String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  product   Product  @relation(fields: [productId], references: [id], onDelete: Cascade)
  @@id([userId, productId])
}

model UserViewedProduct {
  userId    String   // зовнішній ключ на користувача
  productId String   // зовнішній ключ на товар
  viewedAt  DateTime @default(now())
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  product   Product  @relation(fields: [productId], references: [id], onDelete: Cascade)
  @@id([userId, productId])
}

model Post {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  published Boolean
  title     String
  content   String?
  authorId  String?
  author    User?    @relation(fields: [authorId], references: [id])
}

model Category {
  id        String      @id @default(cuid())
  createdAt DateTime    @default(now())
  updatedAt DateTime    @updatedAt
  name      String
  nameEn    String?
  nameUk    String?
  slug      String      @unique
  parentId  String?
  parent    Category?   @relation("CategoryToSubcategories", fields: [parentId], references: [id])
  children  Category[]  @relation("CategoryToSubcategories")
  products  ProductCategory[]
  filters   CategoryFilter[]
}

model CategoryFilter {
  id         String   @id @default(cuid())
  categoryId String
  category   Category @relation(fields: [categoryId], references: [id])
  name       String   // Тип, Матеріал, Виробник
  slug       String   // type, material, manufacturer (для query-параметрів)
  order      Int      @default(0)
  values     CategoryFilterValue[]
}

model CategoryFilterValue {
  id           String   @id @default(cuid())
  filterId     String
  filter       CategoryFilter @relation(fields: [filterId], references: [id])
  value        String   // RAW, Phoenix, Backwoods
  slug         String   // raw, phoenix, backwoods (унікальний в межах фільтра)
  order        Int      @default(0)
  productLinks ProductFilterValue[]

  @@unique([filterId, slug])
}

model Product {
  id             String            @id @default(cuid())
  createdAt      DateTime          @default(now())
  updatedAt      DateTime          @updatedAt
  name           String
  nameEn         String?
  nameUk         String?
  slug           String            @unique
  price          Decimal
  /// Ціна зі знижкою (якщо null — знижки немає)
  salePrice      Decimal?
  currency       String            @default("UAH")
  shortDescription String?
  shortDescriptionEn String?
  shortDescriptionUk String?
  description    String?
  descriptionEn  String?
  descriptionUk  String?
  inStock        Boolean           @default(true)
  stockQuantity  Int?              // null = не ведемо складський облік
  mainImageUrl   String?
  /// Галерея фото товару (перше = головне, якщо mainImageUrl порожній)
  imageUrls      String[]          @default([])
  // для вітрини типу "CBD масло", "CBD WAX" і т.п.
  label          String?           // виводимо як заголовок картки, якщо треба відрізняти від name
  labelEn        String?
  labelUk        String?

  // зв’язки
  categories         ProductCategory[]
  orderItems         OrderItem[]
  reviews            Review[]
  characteristics    ProductCharacteristic[]
  filterValues       ProductFilterValue[]
  descriptionBlocks  ProductDescriptionBlock[]
  viewedBy           UserViewedProduct[]
  cartItems          CartItem[]
  wishlist           UserWishlist[]
  ratingAverage      Float?   @default(0)
  ratingCount        Int      @default(0)
  /// Товар 18+ — доступний лише після підтвердження віку
  ageRestricted      Boolean  @default(false)
}

model ProductDescriptionBlock {
  id        String   @id @default(cuid())
  productId String
  product   Product  @relation(fields: [productId], references: [id])
  type      String   // paragraph | list | heading
  content   String?  // текст для paragraph/heading
  items     Json?    // масив рядків для type=list
  order     Int      @default(0)
}

model ProductFilterValue {
  productId     String
  filterValueId String
  product       Product @relation(fields: [productId], references: [id])
  filterValue   CategoryFilterValue @relation(fields: [filterValueId], references: [id])
  @@id([productId, filterValueId])
}

model ProductCharacteristic {
  id        String   @id @default(cuid())
  productId String
  product   Product  @relation(fields: [productId], references: [id])
  name      String   // назва характеристики, напр. "Кількість капсул в упаковці"
  value     String   // значення, напр. "60 капсул"
  order     Int      @default(0) // порядок виводу
}

model ProductCategory {
  productId  String
  categoryId String

  product Product  @relation(fields: [productId], references: [id])
  category Category @relation(fields: [categoryId], references: [id])

  @@id([productId, categoryId])
}

model Order {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  userId    String
  user      User     @relation(fields: [userId], references: [id])
  items     OrderItem[]
  total     Decimal
  status    String   @default("NEW")

  // Особисті дані (обов'язкові для нових замовлень)
  firstName  String?
  lastName   String?
  middleName String?
  phone      String?
  email      String?
  // Отримувати буде інша людина
  recipientFirstName String?
  recipientLastName  String?
  recipientPhone     String?
  // Доставка
  deliveryMethod  String?  // nova_poshta, ukr_poshta, ...
  deliveryCity    String?
  deliveryAddress String?
  // Інше
  comment         String?
  newsletterConsent Boolean @default(false)
  termsAccepted   Boolean  @default(false)
  discountAmount  Decimal  @default(0)
  deliveryCost    Decimal  @default(0)
  // Оплата
  paymentMethod   String?  // wayforpay, cod, bacs, ...
  paymentStatus   String?  // PENDING, PAID, FAILED
  promoCode       String?
}

model PromoCode {
  id              String    @id @default(cuid())
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @updatedAt
  code            String    @unique
  discountPercent Int
  isActive        Boolean   @default(true)
  expiresAt       DateTime?
  usageLimit      Int?
  usageCount      Int       @default(0)
  usages          PromoCodeUsage[]
}

/// Один промокод — один раз на користувача (код можна шарити між акаунтами)
model PromoCodeUsage {
  id          String    @id @default(cuid())
  createdAt   DateTime  @default(now())
  promoCodeId String
  promoCode   PromoCode @relation(fields: [promoCodeId], references: [id], onDelete: Cascade)
  userId      String
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  orderId     String?

  @@unique([promoCodeId, userId])
  @@index([userId])
}

model OrderItem {
  id        String   @id @default(cuid())
  orderId   String
  order     Order    @relation(fields: [orderId], references: [id])
  productId String
  product   Product  @relation(fields: [productId], references: [id])
  quantity  Int
  price     Decimal  // ціна на момент покупки
}

model Review {
  id         String   @id @default(cuid())
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  productId  String
  product    Product  @relation(fields: [productId], references: [id])
  userId     String?
  user       User?    @relation(fields: [userId], references: [id])
  rating     Int
  title      String?
  text       String?
  authorName String?
}

enum Role {
  ADMIN
  USER
}

model Banner {
  id             String   @id @default(cuid())
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  order          Int      @default(0)
  title          String   @default("")
  titleEn        String?
  titleSub       String?
  titleSubEn     String?
  description    String   @default("")
  descriptionEn  String?
  imageUrl       String
  mobileImageUrl String?
  isActive       Boolean  @default(true)
}

model AboutBlock {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  order     Int      @default(0)
  title     String
  titleEn   String?
  /// Абзаци тексту, розділені \n\n
  body      String   @default("")
  bodyEn    String?
  imageUrl  String?
  imageLeft Boolean  @default(true)
  /// Кнопки зліва (true) або справа (false) у блоці
  buttonsLeft Boolean @default(true)
  ctaLabel  String?
  ctaLabelEn String?
  ctaUrl    String?
  /// JSON: [{ "label": "Instagram", "url": "https://...", "kind": "instagram"|"telegram"|"link"|"pdf" }]
  links     Json?
  /// Відступ тексту (px) навколо текстового блоку
  textPadding Int @default(0)
  /// JSON: [{ "text": "...", "gap": 16 }] — кілька текстів зі своїм відступом після
  textBlocks Json?
}

model FaqItem {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  order     Int      @default(0)
  title     String
  titleEn   String?
  /// Абзаци через \n\n
  body      String   @default("")
  bodyEn    String?
  isActive  Boolean  @default(true)
  /// Розбити текст на колонки (як у дизайні для довгих карток)
  isSplit   Boolean  @default(false)
}

model ContactSettings {
  id             String   @id @default("default")
  updatedAt      DateTime @updatedAt
  introTitle     String   @default("Ми завжди на зв'язку")
  introText      String   @default("")
  scheduleTitle  String   @default("Графік роботи")
  hoursTime      String   @default("12:00 - 21:00")
  daysOff        String   @default("Без вихідних")
  holidayNote    String?
  address        String   @default("")
  email          String   @default("")
  instagramUrl   String   @default("")
  instagramLabel String?
  /// JSON string[] URLs
  telegramUrls   Json     @default("[]")
  /// JSON string[] labels
  telegramLabels Json?
  /// Широта / довгота для Google Maps embed
  mapLat         Float    @default(48.463662)
  mapLng         Float    @default(35.046347)
  mapZoom        Int      @default(17)
  /// Якщо задано — використовується напряму як src iframe
  mapEmbedUrl    String?
  venuePhotoUrl  String?
  certificateUrl String?
  donationUrl    String?
}
