//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  phone String
  instagram String
  telegram String
  firstname String
  lastname String
  middlename String
  role Role [not null]
  ageVerified Boolean [note: 'null = не підтверджено, true = 18+, false = менше 18']
  posts Post [not null]
  orders Order [not null]
  reviews Review [not null]
  viewedProducts UserViewedProduct [not null]
  cartItems CartItem [not null]
  wishlist UserWishlist [not null]
  promoUsages PromoCodeUsage [not null]
}

Table PasswordReset {
  id String [pk]
  email String [not null]
  code String [not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table CartItem {
  id String [pk]
  userId String [not null]
  productId String [not null]
  quantity Int [not null, default: 1]
  user User [not null]
  product Product [not null]

  indexes {
    (userId, productId) [unique]
  }
}

Table UserWishlist {
  userId String [not null]
  productId String [not null]
  user User [not null]
  product Product [not null]

  indexes {
    (userId, productId) [pk]
  }
}

Table UserViewedProduct {
  userId String [not null]
  productId String [not null]
  viewedAt DateTime [default: `now()`, not null]
  user User [not null]
  product Product [not null]

  indexes {
    (userId, productId) [pk]
  }
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  authorId String
  author User
}

Table Category {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  nameEn String
  nameUk String
  slug String [unique, not null]
  parentId String
  parent Category
  children Category [not null]
  products ProductCategory [not null]
  filters CategoryFilter [not null]
}

Table CategoryFilter {
  id String [pk]
  categoryId String [not null]
  category Category [not null]
  name String [not null]
  slug String [not null]
  order Int [not null, default: 0]
  values CategoryFilterValue [not null]
}

Table CategoryFilterValue {
  id String [pk]
  filterId String [not null]
  filter CategoryFilter [not null]
  value String [not null]
  slug String [not null]
  order Int [not null, default: 0]
  productLinks ProductFilterValue [not null]

  indexes {
    (filterId, slug) [unique]
  }
}

Table Product {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  nameEn String
  nameUk String
  slug String [unique, not null]
  price Decimal [not null]
  salePrice Decimal [note: 'Ціна зі знижкою (якщо null — знижки немає)']
  currency String [not null, default: 'UAH']
  shortDescription String
  shortDescriptionEn String
  shortDescriptionUk String
  description String
  descriptionEn String
  descriptionUk String
  inStock Boolean [not null, default: true]
  stockQuantity Int
  mainImageUrl String
  imageUrls String[] [not null, note: 'Галерея фото товару (перше = головне, якщо mainImageUrl порожній)']
  label String
  labelEn String
  labelUk String
  categories ProductCategory [not null]
  orderItems OrderItem [not null]
  reviews Review [not null]
  characteristics ProductCharacteristic [not null]
  filterValues ProductFilterValue [not null]
  descriptionBlocks ProductDescriptionBlock [not null]
  viewedBy UserViewedProduct [not null]
  cartItems CartItem [not null]
  wishlist UserWishlist [not null]
  ratingAverage Float [default: 0]
  ratingCount Int [not null, default: 0]
  ageRestricted Boolean [not null, default: false, note: 'Товар 18+ — доступний лише після підтвердження віку']
}

Table ProductDescriptionBlock {
  id String [pk]
  productId String [not null]
  product Product [not null]
  type String [not null]
  content String
  items Json
  order Int [not null, default: 0]
}

Table ProductFilterValue {
  productId String [not null]
  filterValueId String [not null]
  product Product [not null]
  filterValue CategoryFilterValue [not null]

  indexes {
    (productId, filterValueId) [pk]
  }
}

Table ProductCharacteristic {
  id String [pk]
  productId String [not null]
  product Product [not null]
  name String [not null]
  value String [not null]
  order Int [not null, default: 0]
}

Table ProductCategory {
  productId String [not null]
  categoryId String [not null]
  product Product [not null]
  category Category [not null]

  indexes {
    (productId, categoryId) [pk]
  }
}

Table Order {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
  user User [not null]
  items OrderItem [not null]
  total Decimal [not null]
  status String [not null, default: 'NEW']
  firstName String
  lastName String
  middleName String
  phone String
  email String
  recipientFirstName String
  recipientLastName String
  recipientPhone String
  deliveryMethod String
  deliveryCity String
  deliveryAddress String
  comment String
  newsletterConsent Boolean [not null, default: false]
  termsAccepted Boolean [not null, default: false]
  discountAmount Decimal [not null, default: 0]
  deliveryCost Decimal [not null, default: 0]
  paymentMethod String
  paymentStatus String
  promoCode String
}

Table PromoCode {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  code String [unique, not null]
  discountPercent Int [not null]
  isActive Boolean [not null, default: true]
  expiresAt DateTime
  usageLimit Int
  usageCount Int [not null, default: 0]
  usages PromoCodeUsage [not null]
}

Table PromoCodeUsage {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  promoCodeId String [not null]
  promoCode PromoCode [not null]
  userId String [not null]
  user User [not null]
  orderId String

  indexes {
    (promoCodeId, userId) [unique]
  }

  Note: 'Один промокод — один раз на користувача (код можна шарити між акаунтами)'
}

Table OrderItem {
  id String [pk]
  orderId String [not null]
  order Order [not null]
  productId String [not null]
  product Product [not null]
  quantity Int [not null]
  price Decimal [not null]
}

Table Review {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  productId String [not null]
  product Product [not null]
  userId String
  user User
  rating Int [not null]
  title String
  text String
  authorName String
}

Table Banner {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  order Int [not null, default: 0]
  title String [not null, default: '']
  titleEn String
  titleSub String
  titleSubEn String
  description String [not null, default: '']
  descriptionEn String
  imageUrl String [not null]
  mobileImageUrl String
  isActive Boolean [not null, default: true]
}

Table AboutBlock {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  order Int [not null, default: 0]
  title String [not null]
  titleEn String
  body String [not null, default: '', note: 'Абзаци тексту, розділені \n\n']
  bodyEn String
  imageUrl String
  imageLeft Boolean [not null, default: true]
  buttonsLeft Boolean [not null, default: true, note: 'Кнопки зліва (true) або справа (false) у блоці']
  ctaLabel String
  ctaLabelEn String
  ctaUrl String
  links Json [note: 'JSON: [{ "label": "Instagram", "url": "https://...", "kind": "instagram"|"telegram"|"link"|"pdf" }]']
  textPadding Int [not null, default: 0, note: 'Відступ тексту (px) навколо текстового блоку']
  textBlocks Json [note: 'JSON: [{ "text": "...", "gap": 16 }] — кілька текстів зі своїм відступом після']
}

Table FaqItem {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  order Int [not null, default: 0]
  title String [not null]
  titleEn String
  body String [not null, default: '', note: 'Абзаци через \n\n']
  bodyEn String
  isActive Boolean [not null, default: true]
  isSplit Boolean [not null, default: false, note: 'Розбити текст на колонки (як у дизайні для довгих карток)']
}

Table ContactSettings {
  id String [pk, default: 'default']
  updatedAt DateTime [not null]
  introTitle String [not null, default: 'Ми завжди на зв'язку']
  introText String [not null, default: '']
  scheduleTitle String [not null, default: 'Графік роботи']
  hoursTime String [not null, default: '12:00 - 21:00']
  daysOff String [not null, default: 'Без вихідних']
  holidayNote String
  address String [not null, default: '']
  email String [not null, default: '']
  instagramUrl String [not null, default: '']
  instagramLabel String
  telegramUrls Json [not null, default: '[]', note: 'JSON string[] URLs']
  telegramLabels Json [note: 'JSON string[] labels']
  mapLat Float [not null, default: 48.463662, note: 'Широта / довгота для Google Maps embed']
  mapLng Float [not null, default: 35.046347]
  mapZoom Int [not null, default: 17]
  mapEmbedUrl String [note: 'Якщо задано — використовується напряму як src iframe']
  venuePhotoUrl String
  certificateUrl String
  donationUrl String
}

Enum Role {
  ADMIN
  USER
}

Ref: CartItem.userId > User.id [delete: Cascade]

Ref: CartItem.productId > Product.id [delete: Cascade]

Ref: UserWishlist.userId > User.id [delete: Cascade]

Ref: UserWishlist.productId > Product.id [delete: Cascade]

Ref: UserViewedProduct.userId > User.id [delete: Cascade]

Ref: UserViewedProduct.productId > Product.id [delete: Cascade]

Ref: Post.authorId > User.id

Ref: Category.parentId - Category.id

Ref: CategoryFilter.categoryId > Category.id

Ref: CategoryFilterValue.filterId > CategoryFilter.id

Ref: ProductDescriptionBlock.productId > Product.id

Ref: ProductFilterValue.productId > Product.id

Ref: ProductFilterValue.filterValueId > CategoryFilterValue.id

Ref: ProductCharacteristic.productId > Product.id

Ref: ProductCategory.productId > Product.id

Ref: ProductCategory.categoryId > Category.id

Ref: Order.userId > User.id

Ref: PromoCodeUsage.promoCodeId > PromoCode.id [delete: Cascade]

Ref: PromoCodeUsage.userId > User.id [delete: Cascade]

Ref: OrderItem.orderId > Order.id

Ref: OrderItem.productId > Product.id

Ref: Review.productId > Product.id

Ref: Review.userId > User.id